--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    display: none;
 }
 
 #home-player-select {
