--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,84 @@
-
-body {
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
   font-family: 'Arial', sans-serif;
-  font-size: 16pt;
   background-color: #333;
 }
 
 .blackboard {
   background-color: #000000;
-  width: 90%;
-  max-width: 1000px;
-  padding: 20px;
-  margin: 50px auto;
-  border: 5px solid #F7931A; /* Simulate wooden border */
-  overflow: auto;
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  max-height: none;
+  padding: 2vh;
+  margin: 0;
+  border: 1vh solid #F7931A;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
 }
 
 .team {
   width: 50%;
-  float: left;
-  padding: 10px;
+  height: 100%;
+  padding: 1vh;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .team h2 {
   text-align: center;
   color: white;
+  font-size: 3vh;
+  margin: 1vh 0;
 }
 
 .team-logo {
-  display: block;
-  width: 100px;
-  height: 100px;
-  margin: 10px auto;
-}
-
-.team-name,
-.logo-url {
-  width: 80%;
-  margin: 10px auto;
-  display: block;
-  padding: 5px;
+  width: 10vh;
+  height: 10vh;
+  margin: 1vh auto;
 }
 
 .player-list {
   list-style-type: none;
   padding: 0;
+  margin: 0;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .player-list li {
-  margin: 5px 0;
+  margin: 0.5vh 0;
   color: white;
+  font-size: 2vh;
 }
 
-.controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    display: none;
+/* Responsive font sizing */
+@media screen and (max-width: 1024px) {
+  body {
+    font-size: 14pt;
+  }
+  .team h2 {
+    font-size: 2.5vh;
+  }
+  .player-list li {
+    font-size: 1.8vh;
+  }
 }
 
-#home-player-select {
-    flex-grow: 1; /* This will make the dropdown take as much space as available */
-    margin-right: 10px; /* Space between dropdown and button */
-}
-
-#refresh-button {
-    margin-left: 10px; /* Alternatively, you could give space from this side */
-    /* Other styles as per your design */
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 12pt;
+  }
+  .team h2 {
+    font-size: 2vh;
+  }
+  .player-list li {
+    font-size: 1.6vh;
+  }
 }
