--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body, html {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center; /* Center children horizontally */
 }
 
 .team h2 {
@@ -50,12 +51,15 @@ body, html {
   margin: 0;
   overflow-y: auto;
   flex-grow: 1;
+  width: 80%; /* Adjust this value to control the width of the list */
+  max-width: 300px; /* Set a maximum width for larger screens */
 }
 
 .player-list li {
   margin: 0.5vh 0;
   color: white;
   font-size: 2vh;
+  text-align: left; /* Ensure text is left-aligned within the list */
 }
 
 /* Responsive font sizing */
