--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
   font-family: 'Arial', sans-serif;
   background-color: #333;
 }
@@ -18,8 +17,15 @@ body, html {
   border: 1vh solid #F7931A;
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   overflow: hidden;
+}
+
+.teams-container {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  overflow: auto;
 }
 
 .team {
@@ -29,7 +35,7 @@ body, html {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center children horizontally */
+  align-items: center;
 }
 
 .team h2 {
@@ -51,15 +57,29 @@ body, html {
   margin: 0;
   overflow-y: auto;
   flex-grow: 1;
-  width: 80%; /* Adjust this value to control the width of the list */
-  max-width: 300px; /* Set a maximum width for larger screens */
+  width: 80%;
+  max-width: 300px;
 }
 
 .player-list li {
   margin: 0.5vh 0;
   color: white;
   font-size: 2vh;
-  text-align: left; /* Ensure text is left-aligned within the list */
+  text-align: left;
+}
+
+.banner-container {
+  width: 100%;
+  padding: 1vh;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-image {
+  max-width: 50%;
+  height: auto;
 }
 
 /* Responsive font sizing */
